fix: spacing between versions on changelog

--- a/doc-site/src/components/layout.css
+++ b/doc-site/src/components/layout.css
@@ -80,6 +80,11 @@ h6 {
   position: relative;
 }
 
+/* space out changelog versions */
+.gatsby:not(h2) + h2.gatsby {
+  margin-top: 2.5rem;
+}
+
 .token-line:not(:last-child) {
   min-height: 1rem;
 }
